<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sravanreddy.implicitintents.MainActivity">

    <EditText
        android:id="@+id/website_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/website_edittext_hint" />

    <Button
        android:id="@+id/button-search"
        android:onClick="clickHandler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text" />

    <EditText
        android:id="@+id/location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/location_edittext_hint" />

    <Button
        android:id="@+id/location_button"
        android:onClick="clickHandler"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_button_text" />

    <EditText
        android:id="@+id/message_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mesage_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/share_button"
        android:onClick="clickHandler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_button_text" />
</LinearLayout>
